--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "typescript": "^5.5.3"
   },
   "devDependencies": {
-    "@types/node": "^20.14.10"
+    "@types/node": "^20.14.10",
+    "@types/node-cron": "^3.0.11",
+    "node-cron": "^3.0.3"
   }
 }
