--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "puppeteer": "^22.13.0",
     "telegraf": "^4.16.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
